update i18n and metadata

--- a/locales/en/plugin__kubebrowser-plugin.json
+++ b/locales/en/plugin__kubebrowser-plugin.json
@@ -1,4 +1,53 @@
 {
+  "Actions": "Actions",
+  "An error occurred.": "An error occurred.",
+  "An error occurred. Please try again.": "An error occurred. Please try again.",
+  "Browser": "Browser",
+  "Browser is starting": "Browser is starting",
+  "Browser is Stopped": "Browser is Stopped",
+  "Browser is stopping": "Browser is stopping",
+  "Browser state unknown": "Browser state unknown",
+  "Cancel": "Cancel",
   "Click Connect to open the VNC console.": "Click Connect to open the VNC console.",
-  "Connect": "Connect"
+  "Connect": "Connect",
+  "Copy to clipboard": "Copy to clipboard",
+  "Create": "Create",
+  "Create a browser deployment in your selected namespace.": "Create a browser deployment in your selected namespace.",
+  "Create Browser": "Create Browser",
+  "Date Created": "Date Created",
+  "Delete browser": "Delete browser",
+  "Deployment": "Deployment",
+  "Details": "Details",
+  "Filter browsers": "Filter browsers",
+  "Filter namespaces": "Filter namespaces",
+  "Go": "Go",
+  "JSON": "JSON",
+  "Loading": "Loading",
+  "Loading Browsers": "Loading Browsers",
+  "Loading Namespaces": "Loading Namespaces",
+  "Name": "Name",
+  "Namespace": "Namespace",
+  "Namespaces": "Namespaces",
+  "New Browser": "New Browser",
+  "Nothing to render": "Nothing to render",
+  "Pod": "Pod",
+  "Pods": "Pods",
+  "Project": "Project",
+  "Projects": "Projects",
+  "read-only": "read-only",
+  "Reset": "Reset",
+  "Select a Browser": "Select a Browser",
+  "Select Browser": "Select Browser",
+  "Select Namespace": "Select Namespace",
+  "Start": "Start",
+  "Start Browser": "Start Browser",
+  "Start browser immediately": "Start browser immediately",
+  "Started": "Started",
+  "Status": "Status",
+  "Stop": "Stop",
+  "Successfully copied to clipboard": "Successfully copied to clipboard",
+  "Terminating browser deployment.": "Terminating browser deployment.",
+  "Turn on browser to use it.": "Turn on browser to use it.",
+  "Unable to identity the browser state. See the deployment": "Unable to identity the browser state. See the deployment",
+  "Waiting for browser deployment to be ready.": "Waiting for browser deployment to be ready."
 }
